fork under style img-box with mask

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
 
             <section class="img-box-container">
                 <div class="card-item">
-                    <img src="assets/img/bgUnlim.jpg" alt="" class="img-box" />
+                    <img src="assets/img/bgUnlim.jpg" alt="" class="img-box mask" />
                     <span class="text-box" data-i18n="Unlimited Art <br>Creation"
                     >Unlimited Art Creation</span
                     >
                 </div>
 
                 <div class="card-item">
-                    <img src="assets/img/Bitmap.png" alt="" class="img-box" />
+                    <img src="assets/img/Bitmap.png" alt="" class="img-box mask" />
                     <span class="text-box" data-i18n="Exclusive <br>Styles"
                     >Exclusive Styles</span
                     >
                 </div>
 
                 <div class="card-item">
-                    <img src="assets/img/Group%2033.jpg" alt="" class="img-box" />
+                    <img src="assets/img/Group%2033.jpg" alt="" class="img-box mask" />
                     <span class="text-box" data-i18n="Magic Avatars <br>With 20% Off"
                     >Magic Avatars With 20% Off</span
                     >
