one style in files

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link href="style.css" rel="stylesheet" />
-    <title>Title</title>
+    <link href="style.css" rel="stylesheet"/>
+    <title>Task AIBY</title>
 </head>
 <body>
 <div class="container">
     <div class="status-bar"></div>
     <span class="close-icon">
-          <a href="#" ><img src="assets/icons/cross.svg" alt="cross"></a>
+          <a href="#"><img src="assets/icons/cross.svg" alt="cross"></a>
       </span>
 
     <main>
@@ -22,24 +22,18 @@
 
             <section class="img-box-container">
                 <div class="card-item">
-                    <img src="assets/img/bgUnlim.jpg" alt="" class="img-box mask" />
-                    <span class="text-box" data-i18n="Unlimited Art <br>Creation"
-                    >Unlimited Art Creation</span
-                    >
+                    <img src="assets/img/bgUnlim.jpg" alt="Unlimited Art Creation" class="img-box mask"/>
+                    <span class="text-box" data-i18n="Unlimited Art <br>Creation">Unlimited Art Creation</span>
                 </div>
 
                 <div class="card-item">
-                    <img src="assets/img/Bitmap.png" alt="" class="img-box mask" />
-                    <span class="text-box" data-i18n="Exclusive <br>Styles"
-                    >Exclusive Styles</span
-                    >
+                    <img src="assets/img/Bitmap.png" alt="Exclusive Styles" class="img-box mask"/>
+                    <span class="text-box" data-i18n="Exclusive <br>Styles">Exclusive Styles</span>
                 </div>
 
                 <div class="card-item">
-                    <img src="assets/img/Group%2033.jpg" alt="" class="img-box mask" />
-                    <span class="text-box" data-i18n="Magic Avatars <br>With 20% Off"
-                    >Magic Avatars With 20% Off</span
-                    >
+                    <img src="assets/img/Group%2033.jpg" alt="Magic Avatars With 20% Off" class="img-box mask"/>
+                    <span class="text-box" data-i18n="Magic Avatars <br>With 20% Off">Magic Avatars With 20% Off</span>
                 </div>
             </section>
 
@@ -48,25 +42,14 @@
 
                     <div class="box box-first" id="box-fers">
                         <div class="box-left">
-                  <span class="box-title" data-i18n="YEARLY ACCESS"
-                  >Yearly access</span
-                  >
-                            <span
-                                    class="box-subtitle"
-                                    data-i18n="Just {{price}} per year"
-                                    data-i18n-params='{"price":"$39.99"}'
-                            >
-                    Just $39.99 per year
-                  </span>
+                  <span class="box-title" data-i18n="YEARLY ACCESS">Yearly access</span>
+                            <span class="box-subtitle" data-i18n="Just {{price}} per year"
+                                  data-i18n-params='{"price":"$39.99"}'>Just $39.99 per year</span>
                         </div>
 
                         <div class="box-right">
-                  <span
-                          class="box-price"
-                          data-i18n="{{price}} <br>per week"
-                          data-i18n-params='{"price":"$0.48"}'
-                  >$0.48<br />per week</span
-                  >
+                            <span class="box-price" data-i18n="{{price}} <br>per week"
+                          data-i18n-params='{"price":"$0.48"}'>$0.48<br/>per week</span>
                         </div>
 
                         <div class="aboveBest" id="aboveBest">
@@ -75,16 +58,10 @@
                     </div>
 
                     <div class="box box-weekly" id="box-weekly">
-                <span class="box-title" data-i18n="WEEKLY ACCESS"
-                >Weekly access</span
-                >
+                        <span class="box-title" data-i18n="WEEKLY ACCESS">Weekly access</span>
                         <div class="box-right">
-                  <span
-                          class="box-price"
-                          data-i18n="{{price}} <br>per week"
-                          data-i18n-params='{"price":"$6.99"}'
-                  >$6.99<br />per week</span
-                  >
+                            <span class="box-price" data-i18n="{{price}} <br>per week"
+                                  data-i18n-params='{"price":"$6.99"}'>$6.99<br/>per week</span>
                         </div>
                     </div>
                 </div>
