--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
             <section class="img-box-container">
                 <div class="card-item">
-                    <img src="assets/img/bgUnlim.webp" alt="Unlimited Art Creation" class="img-box mask"/>
+                    <img src="assets/img/bgUnlim.jpg" alt="Unlimited Art Creation" class="img-box mask"/>
                     <span class="text-box" data-i18n="Unlimited Art <br>Creation">Unlimited Art Creation</span>
                 </div>
 
                 <div class="card-item">
-                    <img src="assets/img/Bitmap.webp" alt="Exclusive Styles" class="img-box mask"/>
+                    <img src="assets/img/Bitmap.png" alt="Exclusive Styles" class="img-box mask"/>
                     <span class="text-box" data-i18n="Exclusive <br>Styles">Exclusive Styles</span>
                 </div>
 
                 <div class="card-item">
-                    <img src="assets/img/Group%2033.webp" alt="Magic Avatars With 20% Off" class="img-box mask"/>
+                    <img src="assets/img/Group%2033.jpg" alt="Magic Avatars With 20% Off" class="img-box mask"/>
                     <span class="text-box" data-i18n="Magic Avatars <br>With 20% Off">Magic Avatars With 20% Off</span>
                 </div>
             </section>
