--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="status-bar"></div>
+
     <span class="close-icon">
           <a href="#"><img src="assets/icons/cross.svg" alt="cross"></a>
       </span>
@@ -22,17 +22,20 @@
 
             <section class="img-box-container">
                 <div class="card-item">
-                    <img src="assets/img/bgUnlim.jpg" alt="Unlimited Art Creation" class="img-box mask"/>
+                    <img class="img-box" src="assets/img/bgUnlim.jpg" srcset="assets/img/bgUnlim.jpg 1x, assets/img/bgUnlim@2x.jpg 2x"
+                         alt="Unlimited Art Creation">
                     <span class="text-box" data-i18n="Unlimited Art <br>Creation">Unlimited Art Creation</span>
                 </div>
 
                 <div class="card-item">
-                    <img src="assets/img/Bitmap.png" alt="Exclusive Styles" class="img-box mask"/>
+                    <img class="img-box" src="assets/img/Bitmap.png" srcset="assets/img/Bitmap.png 1x, assets/img/Bitmap@2x.png 2x"
+                         alt="Exclusive Styles">
                     <span class="text-box" data-i18n="Exclusive <br>Styles">Exclusive Styles</span>
                 </div>
 
                 <div class="card-item">
-                    <img src="assets/img/Group%2033.jpg" alt="Magic Avatars With 20% Off" class="img-box mask"/>
+                    <img class="img-box" src="assets/img/Group%2033.jpg" srcset="assets/img/Group 33.jpg 1x, assets/img/Group 33@2x.png 2x"
+                         alt="Magic Avatars With 20% Off">
                     <span class="text-box" data-i18n="Magic Avatars <br>With 20% Off">Magic Avatars With 20% Off</span>
                 </div>
             </section>
